# skyportal

./: .buildinfo  .dockerignore  .eslintrc.yaml  .git-blame-ignore-revs  .git-pre-commit  .gitignore  .gitmodules  .npmrc  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  .prettierrc  .travis.yml  AGENTS.md  ARCHITECTURE.md  CODE-OF-CONDUCT.md  DEVELOPER.md  Dockerfile  LICENSE.txt  Makefile  README.md  RELEASE.txt  adding_comments_annotation_types.html  adding_features.html  advanced_usage.html  alembic.ini  alert_stream_docker-compose.yml  analysis.html  config.yaml  config.yaml.defaults  config.yaml.example  contributing.html  data_loader.html  database.html  deploy.html  design.html  dev.html  docker-compose.yaml  docker-compose.yaml.defaults  docker.yaml  (+43 more)
.dependabot/: config.yaml  config.yml
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: _cache.yaml  add_labels.yaml  build-and-deploy-docs.yaml  delete-superseded-runs.yaml  deploy-docs.yml  gke.yml  lint.yaml  remind.yaml  test.yaml  test.yml  test_api_and_frontend.yaml  test_api_and_utils.yaml  test_api_rate_limiting.yaml  test_docker_build.yaml  test_frontend.yaml  test_frontend_part1.yaml  test_frontend_part2.yaml  test_migrations.yaml  test_models.yaml  test_models_part1.yaml  test_models_part2.yaml  test_observability.yaml  typecheck.yaml
.travis/: deploy_docs.sh  travis_install.sh  travis_script.sh
_sources/: adding_comments_annotation_types.md.txt  analysis.md.txt  followup.md.txt  image_analysis.md.txt  query_analysis.md.txt  setup.md.txt
_static/: documentation_options.js
alembic/: README.md  env.py  script.py.mako
alembic/versions/: 016e5651133b_shifts_user.py  03012be8d192_add_groupedobject_tables.py  0322f907b589_tns_v2.py  0595e877f471_add_streamphotometry_table.py  05bda3fff04d_add_release_to_public_source_pages.py  05c1ca1487a9_gcn_allocation_triggers.py  0620901b0a2d_classification_ml.py  065726baac98_swift_alert.py  0bc55992eb50_tns.py  (+319 more)
configs/: README.md  db_demo.yaml  db_seed.yaml  instruments.yaml  telescopes.yaml
data/: 16fil_phot.csv  AMON.xml  CLU_mini.hdf5  DECam.reg  DECam_Fields.csv  DECam_Ref.csv  DECam_Region.reg  GLADE.csv  GLADE.txt  GROWTH-India_Fields.csv.bz2  GW190814.xml  LSST_Fields.csv  Makefile  README.md  Swift_Region.reg  TESS_photometric_series1.h5  TESS_photometric_series2.h5  WINTER_Fields.csv.bz2  ZTF.reg  ZTF18aabcvnq_phot.csv  ZTF20abwysqy_phot.csv  ZTF21aaqjmps_arnett_lc.json  ZTF21aaqjmps_phot.csv  ZTF21aaqjmps_spec.csv  ZTF_Fields.csv  ZTF_GW190425_observation_data.csv  ZTF_Ref.csv  ZTF_Region.reg  ZTF_Square_Region.reg  ZTFinGCN_phot.csv  ZTFrlh6cyjh_phot.csv  badsource.csv  db_demo.yaml  db_fritz.yaml  db_seed.yaml  eso_standards.csv  gll_psc_v27.csv  instruments.yaml  instruments_fritz.yaml  phot.csv  (+15 more)
doc/: Makefile  about.md  adding_features.md  advanced_usage.md  analysis.md  api.rst  boom_alerts.md  boom_filters.md  broker_plugins.md  comment_url_migration.md  conf.py  contributing.md  data_loader.md  database.rst  deploy.md  design.md  dev.md  extensions.md  external_services.md  followup.md  image_analysis.md  index.rst  install.md  mcp_server.md  migrations.md  mma.md  observability.md  openapi.html.template  optional_microservices.md  pages.md  period.md  permissions.md  photometric_series.md  query_analysis.md  setup.md  slack.md  spatial_catalog.md  styling.md  thumbnails.md  typescript_migration.md  (+3 more)
docker-compose/: docker-compose.yml
jobs/: candidate_analysis_cronjob.py  count_unsaved_candidates.py  delete_old_cands_query_cache.py  delete_unsaved_candidates.py  expire_users.py
kubernetes/: kubernetes.yaml
observability/: docker-compose.observability.yaml
postgres:9.6-q3c/: Dockerfile
q3c/: Dockerfile  q3c.sh
services/: news.yaml  status.html.tmpl  status_monitor.py
skyportal/: __init__.py  api_description.md  app_server.py  app_utils.py  asgi_app.py  asgi_base.py  email_utils.py  enum.py  enum_types.py  followup_api.py  initial_setup.py  log.py  model_util.py  models.py  onboarding.py  openapi.py  plot.py  schema.py  source_queries_script.py  workspace.code-workspace
skyportal_app/: models.py
static/: HR_density.json  index.html  index.html.template  index_base.html  login.css  login.html  login.html.template  loginerror.html  loginerror.html.template
tools/: data_loader.py  db_init.py  db_seed.py  direct_insert_to_tables.py  download_ptf.py  elevate_user.py  import_ptf.py  ingest_gcn.py  load_across_instruments.py  load_demo_data.py  mv_management.py  nginx_ip_and_requests.py  nginx_parse.py  patch_db_tables.py  prepare_seed_data.py  set_user_role.py  skyportal_query_examples.ipynb  stream_ingest.py  test_frontend.py  warm_sncosmo_cache.py  ztf_upload_avro.py
(+2849 files in other folders)
