[project]
name = 'skyportal'
version = '1.4.0'
requires-python = '>=3.12,<3.13'
dependencies = [
    "baselayer",
    "astroscrappy==1.3.0",
    "numpy>=1.23.4,<3.0.0",
    "scipy>=1.13.1, <2.0.0",
    "pandas>=2.2.0, <3.0.0",
    "dask>=2024.5.2",
    "geopandas==1.1.1",
    "fiona==1.10.1",
    "intervals==0.9.2",
    "joblib>=1.5.0, <2.0.0",
    "seaborn>=0.13.2, <1.0.0",
    "factory-boy==3.3.3",
    "astropy==6.1.4",
    "distributed>=2024.5.2",
    "dust_extinction==1.6",
    "dustmaps==1.0.13",
    "reproject==0.14.1",
    "avro-python3==1.10.2",
    "fastavro>=1.9.4,<2.0.0",
    "tqdm>=4.27,<4.68",
    "matplotlib>=3.6.2, <3.8.0",
    "astroquery==0.4.11",
    "apispec>=6.3.0, <7.0.0",
    "marshmallow==3.26.2",
    "marshmallow-sqlalchemy==1.1.0",
    "marshmallow-enum==1.5.1",
    "Pillow>=8.4.0",
    "pyproj==3.7.0",
    "sncosmo==2.11.1",
    "tdtax==0.1.7",
    "healpix-alchemy==1.1.0",
    "mocpy==0.18.0",
    "obspy==1.4.0",
    "conesearch-alchemy==1.1.0",
    "regions==0.10",
    "jsonschema==4.23.0",
    "jsonpath_ng==1.7.0",
    "tables>=3.10.1,<4.0.0",
    "timezonefinder==8.2.0",
    "astroplan==0.10.1",
    "email-validator==2.3.0",
    "alembic==1.18.3",
    "marshmallow-jsonschema==0.13.0",
    "paramiko==4.0.0",
    "scp==0.15.0",
    "requests_toolbelt==1.0.0",
    "sendgrid==6.12.5",
    "responses==0.25.8",
    "twilio==9.10.0",
    "numba>=0.59.0",
    "pyvo==1.8",
    "lxml==6.0.2",
    "suds-py3==1.4.5.0",
    "vcrpy==8.1.1",
    "aiosmtpd==1.4.6",
    "ligo.skymap==2.0.1",
    "python-ligo-lw==1.8.4",
    "lalsuite<7.27",
    "healpy==1.18.1",
    "pygcn==1.1.2",
    "pysedm==0.41.0",
    "xmlschema==4.1.0",
    "requests>=2.30.0, <3.0.0",
    "geojson==3.2.0",
    "typing-extensions==4.15.0",
    "swifttools==3.0.23",
    "gwemopt==0.3.6",
    "humanize==4.14.0",
    "xarray>=21.1",
    "simsurvey==0.7.5",
    "noaodatalab==2.20.0",
    "black==25.12.0",
    "click==8.1.7",
    "arviz==0.19.0",
    "corner==2.2.3",
    "penquins==2.4.2",
    "afterglowpy==0.8.1",
    "gcn-kafka==0.3.3",
    "confluent_kafka==2.13.0",
    "iminuit==2.31.3",
    "watchdog==6.0.0",
    "PyAstronomy==0.24.0",
    "shapely==2.1.2",
    "openai==1.109.1",
    "tiktoken==0.12.0",
    "simplejson==3.20.1",
    "langchain==0.3.27",
    "langchain-openai==0.3.28",
    "pinecone==8.0.0",
    "pydantic==2.11.4",
    "sentry-sdk==2.34.1",
    "typing-inspect==0.9.0",
    "brotli==1.2.0",
    "numexpr==2.14.1",
    "setuptools<76.1.0",
]

[dependency-groups]
test = [
    "pytest>=8.3.2, <9.0.0",
    "pytest-randomly==4.0.1",
    "pytest-rerunfailures>=14.0",
    "selenium==4.38.0",
    "selenium-requests==2.0.4",
    "webdriver-manager>=4.0.1",
]
docs = [
    "sphinx>=9.1.0; python_version >= '3.12'",
    "sphinx-book-theme",
    "recommonmark",
    "numpydoc",
    "notedown",
    "jsx-lexer",
    "eralchemy2",
    "jinja2<3.2.0",
]

[tool.uv]
package = false
workspace = { members = ["baselayer"] }

[tool.uv.sources]
baselayer = { workspace = true }

[tool.ruff]
target-version = "py312"

[tool.ruff.lint.pydocstyle]
convention = 'numpy'

[tool.ruff.lint]
extend-select = [
#  "B",        # flake8-bugbear
  "I",        # isort
#  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
#  "D",        # pydocstyle (see tool.ruff.lint.pydocstyle below)
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
#  "G",        # flake8-logging-format
#  "PGH",      # pygrep-hooks                     # TODO skyportal: re-enable
  "PIE",      # flake8-pie
#  "PL",       # pylint
  "PLR0402",
#  "PT",       # flake8-pytest-style
#  "PTH",      # flake8-use-pathlib
#  "RET",      # flake8-return
#  "RUF",      # Ruff-specific
#  "SIM",      # flake8-simplify
  "SIM101",
  "SIM109",
  "SIM110",
  "SIM118",
  "SIM2",
#  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
#  "FURB",     # refurb
  "PYI",      # flake8-pyi
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
  "F",        # pyflakes
  "E",        # pycodestyle
  "EM101",    # Exception must not use a string literal
  "EM102",    # Exception must not use an f-string literal
  "PD",       # pandas-vet
  "ICN",      # flake8-import-conventions
  "PYI",      # flake8-pyi
  "NPY002",   # Replace legacy `np.random.random` call with `np.random.Generator`
]

[tool.ruff.lint.per-file-ignores]
"skyportal/facility_apis/__init__.py" = ['I']

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
